src/objects/Assessment__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Collaborative, Family</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Assessments</relationshipLabel>
        <relationshipName>Assessments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Attendance__c</fullName>
        <description>ISA. Free Text: &quot;Attendance&quot;</description>
        <inlineHelpText>ISA. Free Text: &quot;Attendance&quot;</inlineHelpText>
        <label>Attendance</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>C501_Assessment_Date__c</fullName>
        <description>For all Collabs - the date on which the Assessment was done</description>
        <inlineHelpText>Enter the date the Assessment was done</inlineHelpText>
        <label>Assessment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>C501_CCR_Affordable_Healthcare__c</fullName>
        <description>CCR. Scale of 1-5: &quot;I feel I am able to access affordable healthcare when needed&quot;</description>
        <inlineHelpText>CCR. Scale of 1-5: &quot;I feel I am able to access affordable healthcare when needed&quot;</inlineHelpText>
        <label>Affordable Healthcare</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_CCR_Child_Developing__c</fullName>
        <description>CCR. Scale of 1-5: &quot;I feel my child is developing appropriately&quot;</description>
        <inlineHelpText>CCR. Scale of 1-5: &quot;I feel my child is developing appropriately&quot;</inlineHelpText>
        <label>Child Developing Appropriately</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_CCR_Comfortably_Pay_Bills__c</fullName>
        <description>CCR. Scale of 1-5: &quot;My family can comfortably pay our bills each month&quot;</description>
        <inlineHelpText>CCR. Scale of 1-5: &quot;My family can comfortably pay our bills each month&quot;</inlineHelpText>
        <label>Comfortably Pay Bills</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_CCR_Depression_or_Hopelessness__c</fullName>
        <description>CCR. Scale of 1-5: &quot;Feelings of depression or hopelessness do not affect my ability to function in everyday life&quot;</description>
        <inlineHelpText>CCR. Scale of 1-5: &quot;Feelings of depression or hopelessness do not affect my ability to function in everyday life&quot;</inlineHelpText>
        <label>Depression or Hopelessness</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_CCR_Early_Learning__c</fullName>
        <description>CCR. Scale of 1-5: &quot;I feel my child is accessing quality early learning opportunities&quot;</description>
        <inlineHelpText>CCR. Scale of 1-5: &quot;I feel my child is accessing quality early learning opportunities&quot;</inlineHelpText>
        <label>Early Learning Opportunities</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_CCR_Equipped_to_Reach_Goals__c</fullName>
        <description>CCR. Scale of 1-5: &quot;I feel I have the training, experience, and/or education I need to reach my goals and aspirations&quot;</description>
        <inlineHelpText>CCR. Scale of 1-5: &quot;I feel I have the training, experience, and/or education I need to reach my goals and aspirations&quot;</inlineHelpText>
        <label>Equipped to Reach Goals</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_CCR_Good_Physical_Health__c</fullName>
        <description>CCR. Scale of 1-5: &quot;I feel I am in good physical health&quot;</description>
        <inlineHelpText>CCR. Scale of 1-5: &quot;I feel I am in good physical health&quot;</inlineHelpText>
        <label>Good Physical Health</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_CCR_Meet_Basic_Needs__c</fullName>
        <description>CCR. Scale of 1-5: &quot;I feel confident in my family’s ability to meet our basic needs (stable housing, paying bills, providing healthy food, clothing, transportation, etc.)&quot;</description>
        <inlineHelpText>CCR. Scale of 1-5: &quot;I feel confident in my family’s ability to meet our basic needs (stable housing, paying bills, providing healthy food, clothing, transportation, etc.)&quot;</inlineHelpText>
        <label>Meet Basic Needs</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_CCR_Opportunities_Employment_Goals__c</fullName>
        <description>CCR. Scale of 1-5: &quot;I feel I have access to opportunities to fulfill my employment goals&quot;</description>
        <inlineHelpText>CCR. Scale of 1-5: &quot;I feel I have access to opportunities to fulfill my employment goals&quot;</inlineHelpText>
        <label>Opportunities for Employment Goals</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_CCR_Rarely_Overwhelmed__c</fullName>
        <description>CCR. Scale of 1-5: &quot;I rarely experience feelings of extreme stress or feel overwhelmed&quot;</description>
        <inlineHelpText>CCR. Scale of 1-5: &quot;I rarely experience feelings of extreme stress or feel overwhelmed&quot;</inlineHelpText>
        <label>Rarely Overwhelmed</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_CCR_Resources_to_Pursue_Goals__c</fullName>
        <description>CCR. Scale of 1-5: &quot;I know where to find and how to access resources to pursue my educational and employment goals&quot;</description>
        <inlineHelpText>CCR. Scale of 1-5: &quot;I know where to find and how to access resources to pursue my educational and employment goals&quot;</inlineHelpText>
        <label>Resources to Pursue Goals</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_CCR_Safe_Home__c</fullName>
        <description>CCR. Scale of 1-5: &quot;I feel my family lives in a safe and positive home environment&quot;</description>
        <inlineHelpText>CCR. Scale of 1-5: &quot;I feel my family lives in a safe and positive home environment&quot;</inlineHelpText>
        <label>Safe Home</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_CCR_Saves_Money__c</fullName>
        <description>CCR. Scale of 1-5: &quot;My family saves money at the end of each month&quot;</description>
        <inlineHelpText>CCR. Scale of 1-5: &quot;My family saves money at the end of each month&quot;</inlineHelpText>
        <label>Saves Money</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_CCR_Support_Child_Learning__c</fullName>
        <description>CCR. Scale of 1-5: &quot;I feel confident in my ability to support my child’s learning and have the resources I need to do so&quot;</description>
        <inlineHelpText>CCR. Scale of 1-5: &quot;I feel confident in my ability to support my child’s learning and have the resources I need to do so&quot;</inlineHelpText>
        <label>Support Child&apos;s Learning</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_CCR_Supportive_Family_Relationships__c</fullName>
        <description>CCR. Scale of 1-5: &quot;I feel my family has strong and supporting relationships with each other&quot;</description>
        <inlineHelpText>CCR. Scale of 1-5: &quot;I feel my family has strong and supporting relationships with each other&quot;</inlineHelpText>
        <label>Supportive Family Relationships</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_CCR_Supportive_People__c</fullName>
        <description>CCR. Scale of 1-5: &quot;I feel I have people in my life who help and support me when I need it.&quot;</description>
        <inlineHelpText>CCR. Scale of 1-5: &quot;I feel I have people in my life who help and support me when I need it.&quot;</inlineHelpText>
        <label>Supportive People</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_HH_Early_Childhood__c</fullName>
        <description>HH. Scale 1-10: &quot;Domain: Early Childhood Care and Education&quot;</description>
        <inlineHelpText>HH. Scale 1-10: &quot;Domain: Early Childhood Care and Education&quot;</inlineHelpText>
        <label>Early Childhood</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_HH_Economic_Assets__c</fullName>
        <description>HH. Scale 1-10: &quot;Domain: Economic Assets&quot;</description>
        <inlineHelpText>HH. Scale 1-10: &quot;Domain: Economic Assets&quot;</inlineHelpText>
        <label>Economic Assets</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_HH_Education_Employment__c</fullName>
        <description>HH. Scale 1-10: &quot;Domain: Post -  Secondary Education and Employment Pathways&quot;</description>
        <inlineHelpText>HH. Scale 1-10: &quot;Domain: Post -  Secondary Education and Employment Pathways&quot;</inlineHelpText>
        <label>Education &amp; Employment</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_HH_Health_Wellbeing__c</fullName>
        <description>HH. Scale 1-10: &quot;Domain: Health and Wellbeing&quot;</description>
        <inlineHelpText>HH. Scale 1-10: &quot;Domain: Health and Wellbeing&quot;</inlineHelpText>
        <label>Health &amp; Wellbeing</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_HH_Social_Capital__c</fullName>
        <description>HH. Scale 1-10: &quot;Domain: Social Capital- Friends-Family-Community&quot;</description>
        <inlineHelpText>HH. Scale 1-10: &quot;Domain: Social Capital- Friends-Family-Community&quot;</inlineHelpText>
        <label>Social Capital</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_ISA_Health_Wellbeing__c</fullName>
        <description>ISA. Free Text: &quot;Health &amp; Wellbeing&quot;</description>
        <inlineHelpText>ISA. Free Text: &quot;Health &amp; Wellbeing&quot;</inlineHelpText>
        <label>Health &amp; Wellbeing</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>C501_ISA_Literacy__c</fullName>
        <description>ISA. Free Text: &quot;Literacy&quot;</description>
        <inlineHelpText>ISA. Free Text: &quot;Literacy&quot;</inlineHelpText>
        <label>Literacy</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>C501_ISA_Math__c</fullName>
        <description>ISA. Free Text: &quot;Math&quot;</description>
        <inlineHelpText>ISA. Free Text: &quot;Math&quot;</inlineHelpText>
        <label>Math</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>C501_MLW_Daycare__c</fullName>
        <description>MLW. Scale 1-5: &quot;Bridge: Daycare&quot;</description>
        <inlineHelpText>MLW. Scale 1-5: &quot;Bridge: Daycare&quot;</inlineHelpText>
        <label>Daycare</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_MLW_Debts__c</fullName>
        <description>MLW. Scale 1-5: &quot;Bridge: Debts&quot;</description>
        <inlineHelpText>MLW. Scale 1-5: &quot;Bridge: Debts&quot;</inlineHelpText>
        <label>Debts</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_MLW_Earning_Levels__c</fullName>
        <description>MLW. Scale 1-5: &quot;Bridge: Earning Levels&quot;</description>
        <inlineHelpText>MLW. Scale 1-5: &quot;Bridge: Earning Levels&quot;</inlineHelpText>
        <label>Earning Levels</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_MLW_Education__c</fullName>
        <description>MLW. Scale 1-5: &quot;Bridge: Education&quot;</description>
        <inlineHelpText>MLW. Scale 1-5: &quot;Bridge: Education&quot;</inlineHelpText>
        <label>Education</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_MLW_Health__c</fullName>
        <description>MLW. Scale 1-5: &quot;Bridge: Health&quot;</description>
        <inlineHelpText>MLW. Scale 1-5: &quot;Bridge: Health&quot;</inlineHelpText>
        <label>Health</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_MLW_Housing__c</fullName>
        <description>MLW. Scale 1-5: &quot;Bridge: Housing&quot;</description>
        <inlineHelpText>MLW. Scale 1-5: &quot;Bridge: Housing&quot;</inlineHelpText>
        <label>Housing</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_MLW_Networks__c</fullName>
        <description>MLW. Scale 1-5: &quot;Bridge: Networks&quot;</description>
        <inlineHelpText>MLW. Scale 1-5: &quot;Bridge: Networks&quot;</inlineHelpText>
        <label>Networks</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_MLW_Saving__c</fullName>
        <description>MLW. Scale 1-5: &quot;Bridge: Saving&quot;</description>
        <inlineHelpText>MLW. Scale 1-5: &quot;Bridge: Saving&quot;</inlineHelpText>
        <label>Saving</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_MLW_Transport__c</fullName>
        <description>MLW. Scale 1-5: &quot;Bridge: Transport&quot;</description>
        <inlineHelpText>MLW. Scale 1-5: &quot;Bridge: Transport&quot;</inlineHelpText>
        <label>Transport</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_NCCC_Childcare__c</fullName>
        <description>NCCC. Scale of 1-4 or N/A. &quot;Childcare&quot;</description>
        <inlineHelpText>NCCC. Scale of 1-4 or N/A. &quot;Childcare&quot;</inlineHelpText>
        <label>Childcare</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_NCCC_Children_s_Education__c</fullName>
        <description>NCCC. Scale of 1-4 or N/A. &quot;Children&apos;s Education&quot;</description>
        <inlineHelpText>NCCC. Scale of 1-4 or N/A. &quot;Children&apos;s Education&quot;</inlineHelpText>
        <label>Children&apos;s Education</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_NCCC_Daily_Functioning__c</fullName>
        <description>NCCC. Scale of 1-4 or N/A. &quot;Skills for Daily Functioning&quot;</description>
        <inlineHelpText>NCCC. Scale of 1-4 or N/A. &quot;Skills for Daily Functioning&quot;</inlineHelpText>
        <label>Daily Functioning</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_NCCC_Employment__c</fullName>
        <description>NCCC. Scale of 1-4 or N/A. &quot;Employment&quot;</description>
        <inlineHelpText>NCCC. Scale of 1-4 or N/A. &quot;Employment&quot;</inlineHelpText>
        <label>Employment</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_NCCC_English_Literacy_Comprehension__c</fullName>
        <description>NCCC. Scale of 1-4 or N/A: &quot;English Literacy &amp; Comprehension&quot;</description>
        <inlineHelpText>NCCC. Scale of 1-4 or N/A: &quot;English Literacy &amp; Comprehension&quot;</inlineHelpText>
        <label>English Literacy &amp; Comprehension</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_NCCC_Financial_Income__c</fullName>
        <description>NCCC. Scale of 1-4 or N/A. &quot;Financial/Income&quot;</description>
        <inlineHelpText>NCCC. Scale of 1-4 or N/A. &quot;Financial/Income&quot;</inlineHelpText>
        <label>Financial/Income</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_NCCC_Food__c</fullName>
        <description>NCCC. Scale of 1-4 or N/A. &quot;Food&quot;</description>
        <inlineHelpText>NCCC. Scale of 1-4 or N/A. &quot;Food&quot;</inlineHelpText>
        <label>Food</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_NCCC_Healthcare__c</fullName>
        <description>NCCC. Scale of 1-4 or N/A. &quot;Healthcare&quot;</description>
        <inlineHelpText>NCCC. Scale of 1-4 or N/A. &quot;Healthcare&quot;</inlineHelpText>
        <label>Healthcare</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_NCCC_Housing__c</fullName>
        <description>NCCC. Scale of 1-4 or N/A. &quot;Housing&quot;</description>
        <inlineHelpText>NCCC. Scale of 1-4 or N/A. &quot;Housing&quot;</inlineHelpText>
        <label>Housing</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_NCCC_Legal_Civil__c</fullName>
        <description>NCCC. Scale of 1-4 or N/A. &quot;Legal -- Civil&quot;</description>
        <inlineHelpText>NCCC. Scale of 1-4 or N/A. &quot;Legal -- Civil&quot;</inlineHelpText>
        <label>Legal-Civil</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_NCCC_Legal_Criminal__c</fullName>
        <description>NCCC. Scale of 1-4 or N/A. &quot;Legal -- Criminal&quot;</description>
        <inlineHelpText>NCCC. Scale of 1-4 or N/A. &quot;Legal -- Criminal&quot;</inlineHelpText>
        <label>Legal-Criminal</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_NCCC_Measure_1__c</fullName>
        <description>Placeholder - NCCC. Scale 1-5: &quot;Measure 1&quot;</description>
        <inlineHelpText>Placeholder - NCCC. Scale 1-5: &quot;Measure 1&quot;</inlineHelpText>
        <label>Measure 1</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_NCCC_Measure_2__c</fullName>
        <description>Placeholder - NCCC. Scale 1-5: &quot;Measure 2&quot;</description>
        <inlineHelpText>Placeholder - NCCC. Scale 1-5: &quot;Measure 2&quot;</inlineHelpText>
        <label>Measure 2</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_NCCC_Measure_3__c</fullName>
        <description>Placeholder - NCCC. Scale 1-5: &quot;Measure 3&quot;</description>
        <inlineHelpText>Placeholder - NCCC. Scale 1-5: &quot;Measure 3&quot;</inlineHelpText>
        <label>Measure 3</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_NCCC_Mental_Health__c</fullName>
        <description>NCCC. Scale of 1-4 or N/A. &quot;Mental Health&quot;</description>
        <inlineHelpText>NCCC. Scale of 1-4 or N/A. &quot;Mental Health&quot;</inlineHelpText>
        <label>Mental Health</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_NCCC_Security__c</fullName>
        <description>NCCC. Scale of 1-4 or N/A. &quot;Security&quot;</description>
        <inlineHelpText>NCCC. Scale of 1-4 or N/A. &quot;Security&quot;</inlineHelpText>
        <label>Security</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_NCCC_Substance_Abuse__c</fullName>
        <description>NCCC. Scale of 1-4 or N/A. &quot;Substance Abuse&quot;</description>
        <inlineHelpText>NCCC. Scale of 1-4 or N/A. &quot;Substance Abuse&quot;</inlineHelpText>
        <label>Substance Abuse</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_NCCC_Support__c</fullName>
        <description>NCCC. Scale of 1-4 or N/A. &quot;Social and/or Family Support&quot;</description>
        <inlineHelpText>NCCC. Scale of 1-4 or N/A. &quot;Social and/or Family Support&quot;</inlineHelpText>
        <label>Support</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_NCCC_Transportation__c</fullName>
        <description>NCCC. Scale of 1-4 or N/A. &quot;Transportation&quot;</description>
        <inlineHelpText>NCCC. Scale of 1-4 or N/A. &quot;Transportation&quot;</inlineHelpText>
        <label>Transportation</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_Next_Assessment_Due_Date__c</fullName>
        <description>For all Collabs - the date when this assessment is due to be re-done</description>
        <inlineHelpText>Enter the date this assessment should be re-done</inlineHelpText>
        <label>Next Assessment Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Remaining_Until_Next_Assessment__c</fullName>
        <formula>C501_Next_Assessment_Due_Date__c - TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Remaining Until Next Assessment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Domain__c</fullName>
        <label>Domain</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Domains</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Family_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Optional lookup to the specific family member who is being assessed</description>
        <inlineHelpText>If this assessment applies to one specific family member, link it to their contact record</inlineHelpText>
        <label>Family Member</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <infoMessage>Enter the family member name to search</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Assessments</relationshipLabel>
        <relationshipName>Assessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Next_Assessment__c</fullName>
        <defaultValue>90</defaultValue>
        <description>Days until next assessment</description>
        <label>Days Until Next Assessment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notify_When_Next_Assessment_Due__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Notify When Next Assessment Due</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Target</fullName>
                </value>
                <value>
                    <fullName>Actual</fullName>
                    <default>true</default>
                    <label>Actual</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Assessment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Assessment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assessments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>